<resources>

    <!-- Custom -->
    <string name="app_name">Android_SQLiter</string>
    <string name="delete">DELETE</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_login_to_our_application">Please, login to our application</string>
    <string name="hello">HELLO!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="remove">REMOVE</string>
    <string name="update">UPDATE</string>
    <string name="add">ADD</string>
    <string name="logout">LOGOUT</string>
</resources>
