<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".DataListActivity">

    <item
            android:id="@+id/action_remove_phone"
            android:orderInCategory="100"
            android:title="@string/remove"
            app:showAsAction="ifRoom"
            android:visible="false"/>

    <item
            android:id="@+id/action_add_phone"
            android:orderInCategory="0"
            android:title="@string/add"
            app:showAsAction="collapseActionView"/>

    <item
            android:id="@+id/action_logout"
            android:orderInCategory="1"
            android:title="@string/logout"
            app:showAsAction="collapseActionView"
    />

</menu>