<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity" android:visibility="visible">
    <TextView
            android:layout_width="401dp"
            android:layout_height="64dp"
            android:id="@+id/welcomeText" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" android:text="@string/hello" android:textSize="45sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light" android:textAllCaps="false"/>
    <TextView
            android:text="@string/please_login_to_our_application"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAlignment="center" android:textSize="30sp" app:layout_constraintHorizontal_bias="0.0"
            android:fontFamily="sans-serif-condensed-light" android:textStyle="italic"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.014"/>
    <Button
            android:text="@string/login"
            android:onClick="switchToLoginActivity"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:id="@+id/main_loginBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="36sp"
            android:fontFamily="sans-serif-black" android:background="@color/login" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.265"/>
    <Button
            android:onClick="switchToRegisterActivity"
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:id="@+id/main_registerBtn" android:layout_marginBottom="112dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="36sp" android:fontFamily="sans-serif-black" android:background="@color/register"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>